--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+
+        android:theme="@style/AppTheme"
+        >
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden"
@@ -43,3 +45,4 @@
     </application>
 
 </manifest>
+    <!-- android:theme="@style/AppTheme" -->
